--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         HTML-Template-Associate
-version:      2.00
-version_from: lib/HTML/Template/Associate.pm
-installdirs:  site
+--- #YAML:1.0
+name:               HTML-Template-Associate
+version:            2.01
+abstract:           
+author:
+    - Alex Pavlovic (alex.pavlovic@taskforce-1.com)
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    CGI:                           Test::More
-    Data::FormValidator:           HTML::Template
-    Test::Simple:                  0.44
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    CGI:                  0
+    Data::FormValidator:  0
+    HTML::Template:       0
+    Test::More:           0
+    Test::Simple:         0.44
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
